--- a/com.aware.plugin.esm.flexible/src/main/res/layout/card_esm_flexible.xml
+++ b/com.aware.plugin.esm.flexible/src/main/res/layout/card_esm_flexible.xml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:id="@+id/context_esm_flexible"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <TextView
+        android:id="@+id/tv_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="ESM Flexible plugin running!"
-        android:id="@+id/tv_card"
-        android:textColor="#000"/>
+        android:gravity="center"
+        android:text="@string/tv_text"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#000" />
+
+    <Button
+        android:id="@+id/bt_trigger"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="@string/bt_trigger" />
 </LinearLayout>
