Added toast message for manual trigger of ESM

--- a/com.aware.plugin.esm.flexible/src/main/res/layout/card_esm_flexible.xml
+++ b/com.aware.plugin.esm.flexible/src/main/res/layout/card_esm_flexible.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/tv_text"
+        android:text="@string/manual_trigger_text"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#000" />
 
@@ -21,5 +21,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="@string/bt_trigger" />
+        android:text="@string/manual_trigger_button" />
 </LinearLayout>
